--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "sqlxinsert"
-version = "0.2.2"
+version = "0.3.0-alpha.0"
 authors = ["Filip Bucek <fbucek@invloop.cz>"]
 edition = "2018"
 license = "MIT"
