--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "sqlxinsert"
-version = "0.3.0-alpha.0"
+version = "0.4.0-alpha.0"
 authors = ["Filip Bucek <fbucek@invloop.cz>"]
 edition = "2018"
 license = "MIT"
@@ -17,8 +17,8 @@ eyre = "0.6"
 quote = "1.0"
 syn = "1.0"
 async-trait = "0.1"
-sqlx = { version = "0.4", default-features = false, features = ["runtime-actix-rustls", "sqlite", "postgres"] }
+sqlx = { version = "0.5", default-features = false, features = ["runtime-actix-rustls", "sqlite", "postgres"] }
 
 [dev-dependencies]
-tokio = { version = "0.2", features= ["rt-threaded",  "macros"] }
-sqlx = { version = "0.4", default-features = false, features = ["runtime-actix-rustls", "macros", "sqlite", "postgres"] }
+tokio = { version = "1.14.0", features= ["rt-multi-thread",  "macros"] }
+sqlx = { version = "0.5", default-features = false, features = ["runtime-actix-rustls", "macros", "sqlite", "postgres"] }
