--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "sqlxinsert"
-version = "0.4.0-alpha.0"
+version = "0.4.0"
 authors = ["Filip Bucek <fbucek@invloop.cz>"]
 edition = "2018"
 license = "MIT"
@@ -20,5 +20,5 @@ async-trait = "0.1"
 sqlx = { version = "0.5", default-features = false, features = ["runtime-actix-rustls", "sqlite", "postgres"] }
 
 [dev-dependencies]
-tokio = { version = "1.14.0", features= ["rt-multi-thread",  "macros"] }
+tokio = { version = "1.16", features= ["rt-multi-thread",  "macros"] }
 sqlx = { version = "0.5", default-features = false, features = ["runtime-actix-rustls", "macros", "sqlite", "postgres"] }
