--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,4 +21,5 @@ sqlx = { version = "0.6", default-features = false, features = ["runtime-actix-r
 
 [dev-dependencies]
 tokio = { version = "1.19", features= ["rt-multi-thread",  "macros"] }
+serial_test = "0.9.0"
 sqlx = { version = "0.6", default-features = false, features = ["runtime-actix-rustls", "macros", "sqlite", "postgres"] }
