updated for sqlx 0.7

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,10 +15,10 @@ proc-macro = true
 [dependencies]
 eyre = "0.6"
 quote = "1.0"
-syn = "1.0"
+syn = "2.0"
 async-trait = "0.1"
-sqlx = { version = "0.6", default-features = false, features = ["runtime-actix-rustls", "sqlite", "postgres"] }
+sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio", "sqlite", "postgres"] }
 
 [dev-dependencies]
 tokio = { version = "1.19", features= ["rt-multi-thread",  "macros"] }
-sqlx = { version = "0.6", default-features = false, features = ["runtime-actix-rustls", "macros", "sqlite", "postgres"] }
+sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio", "macros", "sqlite", "postgres"] }
