--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,13 @@ eyre = "0.6"
 quote = "1.0"
 syn = "2.0"
 async-trait = "0.1"
-sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio", "sqlite", "postgres"] }
+sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio"] }
+
+[features]
+default = ["sqlite", "postgres"]
+sqlite = [ "sqlx/sqlite" ]
+postgres = [ "sqlx/postgres" ]
+
 
 [dev-dependencies]
 tokio = { version = "1.19", features= ["rt-multi-thread",  "macros"] }
